<resources>
    <string name="app_name">chatApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_email_exists" />
    <string name="error_message_name" />
    <string name="error_message_email" />
    <string name="hint_name" />
    <string name="hint_email" />
    <string name="beneficiaryaddress" />
    <string name="beneficiarycountry" />
    <string name="register_benef" />
    <string name="show_list_benef" />
    <string name="hint_id" />

</resources>
