<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="ADD PATIENT" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beneficiaryaddress"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beneficiarycountry"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Gender"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryPulserate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryPulserate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Pulserate"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Weight"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Height"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBeneficiaryBloodGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextBeneficiaryBloodgrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Bloodgrp"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTransparentWhite"
            android:text="@string/register_benef" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewBenefList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/show_list_benef"
            android:textColor="#FFF"
            android:textSize="16dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>